--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "4.17.1",
     "mysql2": "2.1.0",
@@ -11,7 +11,7 @@
     "shelljs": "0.8.4"
   },
   "scripts": {
-    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
+    "pre": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
     "start": "node index.js",
     "drop": "npx sequelize-cli db:drop $",
     "seed": "npx sequelize-cli db:seed:all $",
