--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
@@ -17,7 +18,7 @@
     "seed": "npx sequelize-cli db:seed:all $",
     "test": "jest --runInBand",
     "test-coverage": "jest --runInBand --coverage",
-    "debug": "nodemon index.js",
+    "dev": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
