--- a/package.json
+++ b/package.json
@@ -2,22 +2,26 @@
   "name": "blogs-api",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/api/server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
   },
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
-    "start": "node index.js",
+    "start": "node .",
     "drop": "npx sequelize-cli db:drop $",
     "seed": "npx sequelize-cli db:seed:all $",
     "test": "jest --runInBand",
     "test-coverage": "jest --runInBand --coverage",
-    "debug": "nodemon index.js",
+    "debug": "nodemon .",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
     "jest": "26.0.1",
+    "nodemon": "^2.0.12",
     "sequelize-cli": "6.2.0",
     "supertest": "4.0.2"
   }
