--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/.vscode
 /node_modules
 /.pnp
 .pnp.js
@@ -10,6 +11,9 @@
 
 # production
 /build
+
+# config
+/config/config.json
 
 # misc
 .DS_Store
