--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "user",
-    "password": "153426asd!B",
-    "database": "blogs_api",
+    "username": "root",
+    "password": null,
+    "database": "database_development",
     "host": "localhost",
     "dialect": "mysql"
   },
