--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "4.17.1",
     "express-rescue": "^1.1.31",
     "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "nodemon": "^2.0.12",
     "sequelize": "6.3.4",
