--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
-const { resolve } = require('path');
+const path = require('path');
 
 module.exports = {
-  'config': resolve(__dirname,'src', 'config', 'config.js'),
-  'models-path': resolve(__dirname,'src', 'models'),
-  'seeders-path': resolve(__dirname,'src', 'seeders'),
-  'migrations-path': resolve(__dirname, 'src', 'migrations'),
+  'config': path.resolve('src', 'config', 'config.js'),
+  'models-path': path.resolve('src', 'models'),
+  'seeders-path': path.resolve('src', 'seeders'),
+  'migrations-path': path.resolve( 'src', 'migrations'),
 };
