--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-config-trybe-backend": "1.0.3",
     "express": "4.17.1",
     "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
@@ -28,7 +29,7 @@
     "frisby": "2.1.2",
     "jest": "26.0.1",
     "nodemon": "^2.0.12",
-    "sequelize-cli": "6.2.0",
+    "sequelize-cli": "^6.2.0",
     "supertest": "4.0.2"
   }
 }
