--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "dotenv": "8.2.0",
-    "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
-    "sequelize": "6.3.4",
+    "nodemon": "^2.0.9",
+    "sequelize": "^6.3.4",
     "shelljs": "0.8.4"
   },
   "scripts": {
