--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "4.17.1",
     "express-rescue": "^1.1.31",
