--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
-    "mysql2": "2.1.0",
-    "sequelize": "6.3.4",
+    "express": "^4.17.1",
+    "express-rescue": "^1.1.31",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4",
     "shelljs": "0.8.4"
   },
   "scripts": {
@@ -26,7 +28,24 @@
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
     "jest": "26.0.1",
-    "sequelize-cli": "6.2.0",
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0",
     "supertest": "4.0.2"
-  }
+  },
+  "description": "Ao iniciar este projeto, você concorda com as diretrizes do Código de Ética e Conduta e do Manual da Pessoa Estudante da Trybe.",
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tryber/sd-09-project-blogs-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tryber/sd-09-project-blogs-api/issues"
+  },
+  "homepage": "https://github.com/tryber/sd-09-project-blogs-api#readme"
 }
