--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "express-rescue": "^1.1.31",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
-    "nodemon": "^2.0.12",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
   },
@@ -30,6 +29,7 @@
     "frisby": "2.1.2",
     "jest": "26.0.1",
     "sequelize-cli": "6.2.0",
-    "supertest": "4.0.2"
+    "supertest": "4.0.2",
+    "nodemon": "^2.0.12"
   }
 }
