refatorando tudo. migrations recriadas e ordem reestabelecida. middlewares modificados, codigos mais limpos em todas as funçoes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "drop": "npx sequelize-cli db:drop $",
     "seed": "npx sequelize-cli db:seed:all $",
     "test": "jest --runInBand",
+    "forrest-run": "node forrest.js",
     "test-coverage": "jest --runInBand --coverage",
     "debug": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
