--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
+    "dotenv": "^8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
@@ -13,6 +15,7 @@
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
     "start": "node index.js",
+    "dev": "nodemon ./",
     "drop": "npx sequelize-cli db:drop $",
     "seed": "npx sequelize-cli db:seed:all $",
     "test": "jest --runInBand",
