--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "eslint-config-trybe-backend": "1.0.3",
-    "express": "4.17.1",
+    "dotenv": "^8.6.0",
+    "eslint-config-trybe-backend": "^1.0.3",
+    "express": "^4.17.1",
     "express-rescue": "^1.1.31",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "2.1.0",
-    "sequelize": "6.3.4",
-    "shelljs": "0.8.4"
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4",
+    "shelljs": "^0.8.4"
   },
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
@@ -24,13 +24,13 @@
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "frisby": "2.1.2",
-    "jest": "26.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "frisby": "^2.1.2",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0",
-    "supertest": "4.0.2"
+    "supertest": "^4.0.2"
   }
 }
