--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
@@ -12,7 +10,7 @@
   },
   "scripts": {
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate $",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "drop": "npx sequelize-cli db:drop $",
     "seed": "npx sequelize-cli db:seed:all $",
     "test": "jest --runInBand",
@@ -21,11 +19,18 @@
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.1",
+    "express": "^4.17.1",
+    "express-rescue": "^1.1.31",
     "frisby": "2.1.2",
+    "http-status-codes": "^2.1.4",
     "jest": "26.0.1",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.12",
     "sequelize-cli": "6.2.0",
     "supertest": "4.0.2"
   }
