--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-rescue": "^1.1.31",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
+    "nodemon": "^2.0.12",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
   },
