--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "eslint-config-trybe-backend": "1.0.3",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.3.4",
     "shelljs": "0.8.4"
   },
   "scripts": {
