--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.6.0",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "4.17.1",
     "mysql2": "2.1.0",
