--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
     "eslint-config-trybe-backend": "1.0.3",
+    "express": "4.17.1",
+    "express-rescue": "^1.1.31",
+    "joi": "^13.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "2.1.0",
     "sequelize": "6.3.4",
     "shelljs": "0.8.4"
@@ -18,7 +22,8 @@
     "test": "jest --runInBand",
     "test-coverage": "jest --runInBand --coverage",
     "debug": "nodemon index.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "dev": "nodemon index.js --ignore talker.json"
   },
   "devDependencies": {
     "eslint": "6.8.0",
@@ -26,6 +31,7 @@
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
     "jest": "26.0.1",
+    "nodemon": "^2.0.12",
     "sequelize-cli": "6.2.0",
     "supertest": "4.0.2"
   }
